--- a/index.html
+++ b/index.html
@@ -309,8 +309,13 @@
     </a>
   </div>
   <div class="card-container">
-    <a class="card" target="_blank" rel="noopener" href="http://192.168.42.25:4200/app">
+    <a class="card" target="_blank" rel="noopener" href="https://sbp.nspk.ru/sbpay?qrcid=AS1000670LSS7DN18SJQDNP4B05KLJL1">
       <span>SBPayApp</span>
+    </a>
+  </div>
+    <div class="card-container">
+    <a class="card" target="_blank" rel="noopener" href="https://timopheykuznetsov.github.io/tsp/sbpay?qrcid=AS1000670LSS7DN18SJQDNP4B05KLJL1">
+      <span>SBPay iOS</span>
     </a>
   </div>
 
