--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     </a>
   </div>
     <div class="card-container">
-    <a class="card" target="_blank" rel="noopener" href="https://timopheykuznetsov.github.io/tsp/sbpay?qrcid=AS1000670LSS7DN18SJQDNP4B05KLJL1">
+    <a class="card" target="_blank" rel="noopener" href="https://timopheykuznetsov.github.io/sbpay?qrcid=AS1000670LSS7DN18SJQDNP4B05KLJL1">
       <span>SBPay iOS</span>
     </a>
   </div>
