--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
   <h2>Press to Pay</h2>
 
   <div class="card-container">
-    <a class="card" target="_blank" rel="noopener" href="sbpay://7356">
+    <a class="card" target="_blank" rel="noopener" href="sbpay://app?qrcid=AS1000670LSS7DN18SJQDNP4B05KLJL1">
       <span>SBPay</span>
     </a>
   </div>
