--- a/index.html
+++ b/index.html
@@ -299,10 +299,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
   <script>
-log = ChromeSamples.log;
 
 if (!("NDEFReader" in window))
-  ChromeSamples.setStatus("Web NFC is not available. Use Chrome on Android.");
+  console.log("Web NFC is not available. Use Chrome on Android.");
 </script>
 </head>
 <body>
