--- a/index.html
+++ b/index.html
@@ -298,6 +298,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
+  
+  <script src="index.js"></script>
   <script>
 
 if (!("NDEFReader" in window))
