--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@ if (!("NDEFReader" in window))
   </div>
 
 </div>
-  <button id="scanButton">Scan</button>
-<button id="writeButton">Write</button>
+  <button id="scanButton" onClick="onReadClick">Scan</button>
+<button id="writeButton" onClick="onWriteClick">Write</button>
 <button id="makeReadOnlyButton">Make Read-Only</button>
 </body>
 </html>
