--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@ document.getElementById("writeButton").addEventListener("click", async () => {
   </div>
 
 </div>
-  <button id="scanButton" onclick="onReadClick">Scan</button>
-<button id="writeButton" onclick="onWriteClick">Write</button>
+  <button id="scanButton">Scan</button>
+<button id="writeButton">Write</button>
 <button id="makeReadOnlyButton">Make Read-Only</button>
 </body>
 </html>
