--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ if (!("NDEFReader" in window))
   console.log("Web NFC is not available. Use Chrome on Android.");
 </script>
   <script>
-    document.getElementById("scanButton").addEventListener("click", async () => {
+  document.getElementById('scanButton').addEventListener("click", async () => {
   log("User clicked scan button");
 
   try {
@@ -326,7 +326,7 @@ if (!("NDEFReader" in window))
   }
 });
 
-document.getElementById("writeButton").addEventListener("click", async () => {
+document.getElementById('writeButton').addEventListener("click", async () => {
   log("User clicked write button");
 
   try {
