--- a/index.html
+++ b/index.html
@@ -333,35 +333,35 @@ if (!("NDEFReader" in window))
 
   <script>
   document.getElementById('scanButton').addEventListener("click", async () => {
-  log("User clicked scan button");
+  console.log("User clicked scan button");
 
   try {
     const ndef = new NDEFReader();
     await ndef.scan();
-    log("> Scan started");
+    console.log("> Scan started");
 
     ndef.addEventListener("readingerror", () => {
       log("Argh! Cannot read data from the NFC tag. Try another one?");
     });
 
     ndef.addEventListener("reading", ({ message, serialNumber }) => {
-      log(`> Serial Number: ${serialNumber}`);
-      log(`> Records: (${message.records.length})`);
+      console.log("> Serial Number: ${serialNumber}");
+      console.log("> Records: (${message.records.length})");
     });
   } catch (error) {
-    log("Argh! " + error);
+    console.log("Argh! " + error);
   }
 });
 
 document.getElementById('writeButton').addEventListener("click", async () => {
-  log("User clicked write button");
+  console.log("User clicked write button");
 
   try {
     const ndef = new NDEFReader();
     await ndef.write("Hello world!");
-    log("> Message written");
+    console.log("> Message written");
   } catch (error) {
-    log("Argh! " + error);
+    console.log("Argh! " + error);
   }
 });
   </script>
