--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ if (!("NDEFReader" in window))
   <script>
   document.getElementById('scanButton').addEventListener("click", async () => {
   console.log("User clicked scan button");
-
+  document.getElementById('text').innerHTML ="";
   try {
     const ndef = new NDEFReader();
     await ndef.scan();
@@ -347,7 +347,7 @@ if (!("NDEFReader" in window))
     ndef.addEventListener("reading", ({ message, serialNumber }) => {
       console.log("> Serial Number: ${serialNumber}");
       console.log("> Records: (${message.records.length})");
-      document.getElementById('text').value = message;
+      document.getElementById('text').innerHTML = message;
     });
   } catch (error) {
     console.log("Argh! " + error);
