--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ if (!("NDEFReader" in window))
   </div>
 
 </div>
-  <button id="scanButton">Scan</button>
+  <button id="scanButton">Read</button>
 <button id="writeButton">Write</button>
   <h2 id="text"></h2>
 
