--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ if (!("NDEFReader" in window))
     ndef.addEventListener("reading", ({ message, serialNumber }) => {
       console.log("> Serial Number: ${serialNumber}");
       console.log("> Records: (${message.records.length})");
-      document.getElementById('text').innerHTML = message.records[0];
+      document.getElementById('text').innerHTML = message.records[0].data;
     });
   } catch (error) {
     console.log("Argh! " + error);
