--- a/index.html
+++ b/index.html
@@ -340,18 +340,6 @@ if (!("NDEFReader" in window))
     const ndef = new NDEFReader();
     await ndef.scan();
     console.log("> Scan started");
-	switch (record.recordType) {
-      case "text":
-        // TODO: Read text record with record data, lang, and encoding.
-        const textDecoder = new TextDecoder(record.encoding);
-        document.getElementById('text').innerHTML = "Текст: ${textDecoder.decode(record.data)}";
-      case "url":
-        const textDecoder = new TextDecoder();
-		    document.getElementById('text').innerHTML = "URL: ${textDecoder.decode(record.data)}";
-        break;
-      default:
-        // TODO: Handle other records with record data.
-    };
     ndef.addEventListener("readingerror", () => {
       log("Argh! Cannot read data from the NFC tag. Try another one?");
     });
@@ -362,11 +350,11 @@ if (!("NDEFReader" in window))
       switch (record.recordType) {
       case "text":
         // TODO: Read text record with record data, lang, and encoding.
-        // const textDecoder = new TextDecoder(record.encoding);
-        // document.getElementById('text').innerHTML = "Текст: ${textDecoder.decode(record.data)}";
+        const textDecoder = new TextDecoder(record.encoding);
+        document.getElementById('text').innerHTML = "Текст: ${textDecoder.decode(record.data)}";
       case "url":
-        // const textDecoder = new TextDecoder();
-	//	    document.getElementById('text').innerHTML = "URL: ${textDecoder.decode(record.data)}";
+        textDecoder = new TextDecoder();
+	document.getElementById('text').innerHTML = "URL: ${textDecoder.decode(record.data)}";
         break;
       default:
         // TODO: Handle other records with record data.
