--- a/index.html
+++ b/index.html
@@ -327,9 +327,10 @@
   <script src="https://unpkg.com/text-encoding@0.6.4/lib/encoding-indexes.js"></script>
   <script src="https://unpkg.com/text-encoding@0.6.4/lib/encoding.js"></script>
   <script>
-	if (!("NDEFReader" in window))
+	if (!("NDEFReader" in window)){
   	console.log("Web NFC is not available. Use Chrome on Android.");
   	document.getElementById('text').innerHTML = "Web NFC is not available. Use Chrome on Android.";
+	}
 </script>
   <script>
   document.getElementById('scanButton').addEventListener("click", async () => {
