--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
     });
     document.getElementById('text').innerHTML = "tap NFC tag";	
     ndef.addEventListener("reading", ({ message, serialNumber }) => {
+    try{
       console.log("> Serial Number: ${serialNumber}");
       console.log("> Records: (${message.records.length})");
       switch (record.recordType) {
@@ -361,6 +362,10 @@
 	document.getElementById('text').innerHTML = "Неизвестный тип: ${record.recordType}";	      
         // TODO: Handle other records with record data.
     };
+    } catch (error) {
+    console.log("Argh! " + error);
+    document.getElementById('text').innerHTML = "Error! " + error;
+    }
     });
   } catch (error) {
     console.log("Argh! " + error);
