--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
     try{
       console.log("> Serial Number: ${serialNumber}");
       console.log("> Records: (${message.records.length})");
+      var record = message.records[0];
       switch (record.recordType) {
       case "text":
         // TODO: Read text record with record data, lang, and encoding.
