--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 <body>
   <div class="content" role="main">
   <!-- Resources -->
-  <h2>Press to Pay</h2>
+  <h2>Test</h2>
 
   <!--<div class="card-container">
     <a class="card" target="_blank" rel="noopener" href="sbpay://app?qrcid=AS1000670LSS7DN18SJQDNP4B05KLJL1">
@@ -329,7 +329,11 @@
       <span>Write</span>
     </a>
   </div>	  
-
+<div class="card-container">
+    <a class="card" target="_blank" rel="noopener" id="sendName">
+      <span>Send Name</span>
+    </a>
+  </div>
 </div>
 <label for="name">Введите имя:</label>
 
@@ -463,6 +467,29 @@ document.getElementById('text').innerHTML = "tap NFC tag";
   
   
 });
+	  
+document.getElementById('sendName').addEventListener("click", async () => {
+  console.log("User clicked sendName button");
+document.getElementById('text').innerHTML = "tap NFC card";	
+  try {
+    const ndef = new NDEFReader();
+      try {
+        await ndef.write({
+          records: [{ recordType: "text", data: "apdu:"+ document.getElementById('name').value }]
+        }).then(() => {
+    		read();
+  	});
+	
+      } catch {
+        console.log("Write failed :-( try again.");
+      };
+  } catch (error) {
+    console.log("error! " + error);
+    document.getElementById('text').innerHTML = "Error! " + error;
+  }
+  
+  
+});	  
   </script>
 </body>
 </html>
